--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -1,13 +1,16 @@
 {
-    "CacheSettings": {
+   "CacheSettings": {
         "ConnectionString": "localhost:6379"
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "AllowedHosts": "*"
+   },
+   "GrpcSettings": {
+        "DiscountUrl": "http://localhost:5003" 
+   },
+   "Logging": {
+     "LogLevel": {
+       "Default": "Information",
+       "Microsoft": "Warning",
+       "Microsoft.Hosting.Lifetime": "Information"
+     }
+   },
+   "AllowedHosts": "*"
 }
