--- a/src/Services/Discount/Discount.Grpc/appsettings.json
+++ b/src/Services/Discount/Discount.Grpc/appsettings.json
@@ -1,15 +1,18 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+  },
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
   },
   "AllowedHosts": "*",
   "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
-    }
+     "EndpointDefaults": {
+        "Protocols": "Http2"
+     }
   }
 }
